--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.12</version>
         </dependency>
+
+        <!-- Excel 配置 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
