--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <version>3.9</version>
         </dependency>
 
+        <!-- 拼音 -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
         <!-- 日志配置 begin -->
         <dependency>
             <groupId>log4j</groupId>
