--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <version>2.5.0</version>
         </dependency>
 
+        <!-- zip相关 -->
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+
         <!-- 日志配置 begin -->
         <dependency>
             <groupId>log4j</groupId>
