--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
             <version>2.5.0</version>
         </dependency>
 
-
+        <!-- jackson begin -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -92,6 +92,7 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <!-- jackson end -->
 
         <!-- zip相关 -->
         <dependency>
