update by tianyao

--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,11 @@
         </dependency>
 
         <!-- jackson begin -->
-        <!--<dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
