--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
         <!-- 拼音 -->
         <dependency>
             <groupId>com.belerweb</groupId>
