--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>2.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
+
         <!-- jackson begin -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
