--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <version>20140107</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
+
         <!-- jackson begin -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
