--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <version>2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
         <!-- jackson begin -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
