--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <jackson.version>2.8.5</jackson.version>
+        <commons-beanutils.version>1.9.2</commons-beanutils.version>
     </properties>
 
     <dependencies>
@@ -147,6 +148,12 @@
             <version>1.7.10</version>
         </dependency>
         <!-- 日志配置 end -->
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils.version}</version>
+        </dependency>
 
     </dependencies>
 
