--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,11 @@
         <!-- jackson end -->
 
         <!-- zip相关 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
             <version>1.8.2</version>
-        </dependency>
+        </dependency>-->
 
         <!-- 日志配置 begin -->
         <dependency>
