--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <jackson.version>2.8.5</jackson.version>
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
+        <slf4j.version>1.7.21</slf4j.version>
+        <logback.version>1.1.7</logback.version>
     </properties>
 
     <dependencies>
@@ -133,6 +135,18 @@
 
         <!-- 日志配置 begin -->
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <!--logback -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <!--<dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
@@ -146,7 +160,8 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.10</version>
-        </dependency>
+        </dependency>-->
+
         <!-- 日志配置 end -->
 
         <dependency>
