--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,15 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>3.9</version>
+            <!--<version>3.9</version>-->
+            <version>3.16</version>
+        </dependency>
+
+        <!-- Word 配置 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>3.16</version>
         </dependency>
 
         <dependency>
