--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- 引入sftp.jar -->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
